--- a/students.html
+++ b/students.html
@@ -111,7 +111,8 @@ img.emoji {
 		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);
 	})();
-</script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script>
+</script>
+<!--<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script>
 <style type="text/css"></style><link rel="stylesheet" type="text/css" id="gravatar-card-css" href="https://0.gravatar.com/dist/css/hovercard.min.css?ver=201943y"><link rel="stylesheet" type="text/css" id="gravatar-card-services-css" href="https://0.gravatar.com/dist/css/services.min.css?ver=201943y"><script src="https://c0.pubmine.com/1.70.01571827725992/ata.js"></script><style>[touch-action="none"]{ -ms-touch-action: none; touch-action: none; }
 body /shadow-deep/ [touch-action="none"]{ -ms-touch-action: none; touch-action: none; }
 [touch-action="auto"]{ -ms-touch-action: auto; touch-action: auto; }
@@ -265,7 +266,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
 }
 .ata-controls__complain-btn {
     float: right;
-}
+}-->
 </style></head>
 
 <body class="page-template-default page page-id-80 wp-custom-logo wp-embed-responsive customizer-styles-applied singular image-filters-enabled admin-bar highlander-enabled highlander-light">
@@ -293,14 +294,14 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
 						<span class="hide-visually expanded-text">expanded</span>
 						<span class="hide-visually collapsed-text">collapsed</span>
 					</label>
-					<div class="menu-primary-container"><ul id="menu-primary" class="main-menu" aria-label="submenu"><li id="menu-item-51" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-51"><a href="https://edudatagie.wordpress.com">Home</a></li>
-<li id="menu-item-43" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-43"><a href="https://edudatagie.wordpress.com/about/">About</a></li>
-<li id="menu-item-9" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9"><a href="https://edudatagie.wordpress.com/blog/">Contact</a></li>
-<li id="menu-item-86" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-86"><a href="https://edudatagie.wordpress.com/philosophy/">Philosophy</a></li>
-<li id="menu-item-87" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-87"><a href="https://edudatagie.wordpress.com/schools-and-teachers/">Student Data Analysis</a></li>
-<li id="menu-item-182" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-182"><a href="https://edudatagie.wordpress.com/teachers/">For Teachers</a></li>
-<li id="menu-item-88" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-80 current_page_item menu-item-88"><a href="https://edudatagie.wordpress.com/students-and-parents/" aria-current="page">For Students</a></li>
-<li id="menu-item-89" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-89"><a href="https://edudatagie.wordpress.com/general-services/">Writing Services</a></li>
+					<div class="menu-primary-container"><ul id="menu-primary" class="main-menu" aria-label="submenu"><li id="menu-item-51" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-51"><a href="https://edudatagie.com">Home</a></li>
+<li id="menu-item-43" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-43"><a href="https://edudatagie.com/about.html">About</a></li>
+<li id="menu-item-9" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9"><a href="https://edudatagie.com/contact.html">Contact</a></li>
+<li id="menu-item-86" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-86"><a href="https://edudatagie.com/philosophy.html">Philosophy</a></li>
+<li id="menu-item-87" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-87"><a href="https://edudatagie.com/data.html">Student Data Analysis</a></li>
+<li id="menu-item-182" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-182"><a href="https://edudatagie.com/teachers.html">For Teachers</a></li>
+<li id="menu-item-88" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-80 current_page_item menu-item-88"><a href="https://edudatagie.com/students.html" aria-current="page">For Students</a></li>
+<li id="menu-item-89" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-89"><a href="https://edudatagie.com/writing.html">Writing Services</a></li>
 <li id="menu-item-102" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-102"><a href="https://edudatagie.wordpress.com/blog-2/">Blog</a></li>
 </ul></div>				</nav><!-- #site-navigation -->
 			
@@ -341,15 +342,10 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
         </script>
     </div>		<div class="wpcnt">
 			<div class="wpa wpmrec">
-				<span class="wpa-about">Advertisements</span>
-				<div class="u">		<div style="padding-bottom:15px;width:300px;height:250px;float:left;margin-right:5px;margin-top:0px">
-			<div id="atatags-26942-5db4c9ebaa454"><div style="height:250px;width:300px;"><iframe frameborder="0" scrolling="no" width="300" height="250" style="border:none;margin:0;overflow:hidden;width:300px;height:250px;"></iframe></div><div id="atatags-26942-5db4c9ebaa454__controls" class="ata-controls" style="height:10px;width:300px;"><span id="atatags-26942-5db4c9ebaa454__complain-btn" class="ata-controls__complain-btn" style="display: inline;">Report this ad</span></div></div>
-		</div>		<div style="padding-bottom:15px;width:300px;height:250px;float:left;margin-top:0px">
-			<div id="atatags-114160-5db4c9ebaa459"><div style="height:250px;width:300px;"><iframe frameborder="0" scrolling="no" width="300" height="250" style="border:none;margin:0;overflow:hidden;width:300px;height:250px;"></iframe></div><div id="atatags-114160-5db4c9ebaa459__controls" class="ata-controls" style="height:10px;width:300px;"><span id="atatags-114160-5db4c9ebaa459__complain-btn" class="ata-controls__complain-btn" style="display: inline;">Report this ad</span></div></div>
-		</div></div>
+			
 				
 			</div>
-		</div><div id="jp-post-flair" class="sharedaddy sd-like-enabled sd-sharing-enabled"><div class="sharedaddy sd-sharing-enabled"><div class="robots-nocontent sd-block sd-social sd-social-icon-text sd-sharing"><h3 class="sd-title">Share this:</h3><div class="sd-content"><ul><li class="share-twitter"><a rel="nofollow noopener noreferrer" data-shared="sharing-twitter-80" class="share-twitter sd-button share-icon" href="https://edudatagie.wordpress.com/students-and-parents/?share=twitter&amp;nb=1" target="_blank" title="Click to share on Twitter"><span>Twitter</span></a></li><li class="share-facebook"><a rel="nofollow noopener noreferrer" data-shared="sharing-facebook-80" class="share-facebook sd-button share-icon" href="https://edudatagie.wordpress.com/students-and-parents/?share=facebook&amp;nb=1" target="_blank" title="Click to share on Facebook"><span>Facebook</span></a></li><li class="share-end"></li></ul></div></div></div><div class="sharedaddy sd-block sd-like jetpack-likes-widget-wrapper jetpack-likes-widget-loaded" id="like-post-wrapper-154343757-80-5db4c9ebaa846" data-src="//widgets.wp.com/likes/index.html?ver=20190321#blog_id=154343757&amp;post_id=80&amp;origin=edudatagie.wordpress.com&amp;obj_id=154343757-80-5db4c9ebaa846" data-name="like-post-frame-154343757-80-5db4c9ebaa846"><h3 class="sd-title">Like this:</h3><div class="likes-widget-placeholder post-likes-widget-placeholder" style="height: 55px; display: none;"><span class="button"><span>Like</span></span> <span class="loading">Loading...</span></div><iframe class="post-likes-widget jetpack-likes-widget" name="like-post-frame-154343757-80-5db4c9ebaa846" height="55px" width="100%" frameborder="0" src="//widgets.wp.com/likes/index.html?ver=20190321#blog_id=154343757&amp;post_id=80&amp;origin=edudatagie.wordpress.com&amp;obj_id=154343757-80-5db4c9ebaa846"></iframe><span class="sd-text-color"></span><a class="sd-link-color"></a></div></div>	</div><!-- .entry-content -->
+		</div><div id="jp-post-flair" class="sharedaddy sd-like-enabled sd-sharing-enabled"><div class="sharedaddy sd-sharing-enabled"><div class="robots-nocontent sd-block sd-social sd-social-icon-text sd-sharing"><h3 class="sd-title">Share this:</h3><div class="sd-content"><ul><li class="share-twitter"><a rel="nofollow noopener noreferrer" data-shared="sharing-twitter-80" class="share-twitter sd-button share-icon" href="https://edudatagie.wordpress.com/students-and-parents/?share=twitter&amp;nb=1" target="_blank" title="Click to share on Twitter"><span>Twitter</span></a></li><li class="share-facebook"><a rel="nofollow noopener noreferrer" data-shared="sharing-facebook-80" class="share-facebook sd-button share-icon" href="https://edudatagie.wordpress.com/students-and-parents/?share=facebook&amp;nb=1" target="_blank" title="Click to share on Facebook"><span>Facebook</span></a></li><li class="share-end"></li></ul></div></div></div>	</div><!-- .entry-content -->
 
 	</article><!-- #post-80 -->
 
@@ -362,15 +358,12 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
 	<footer id="colophon" class="site-footer responsive-max-width">
 		
 		<div class="site-info">
-										<a class="site-name" href="https://edudatagie.wordpress.com/" rel="home">edudatagie</a><span class="comma">,</span>
-						<a href="https://wordpress.com/?ref=footer_custom_powered" rel="nofollow">Powered by WordPress.com</a>.					</div><!-- .site-info -->
+														</div><!-- .site-info -->
 	</footer><!-- #colophon -->
 
 </div><!-- #page -->
 
-<!--  -->
-<div id="wpadminbar" class="marketing-bar"><div class="marketing-bar-text">Create your website at <span class="skimlinks-unlinked">WordPress.com</span></div><a class="marketing-bar-button" href="https://wordpress.com/?ref=marketing_bar">Get started</a></div><script type="text/javascript" src="//0.gravatar.com/js/gprofiles.js?ver=201943y"></script>
-<script type="text/javascript">
+<!--<script type="text/javascript">
 /* <![CDATA[ */
 var WPGroHo = {"my_hash":""};
 /* ]]> */
@@ -395,7 +388,7 @@ var WPGroHo = {"my_hash":""};
 			Gravatar.my_hash = WPGroHo.my_hash;
 			Gravatar.init( 'body', '#wp-admin-bar-my-account' );
 		});
-	</script>
+	</script> -->
 
 		<div style="display:none">
 	</div>
@@ -523,22 +516,4 @@ if ( 'object' === typeof wpcom_mobile_user_agent_info ) {
 </script>
 
 
-<div class="comment-likes-overlay" style="display: none;"></div><img src="https://pixel.wp.com/g.gif?blog=154343757&amp;v=wpcom&amp;tz=-4&amp;user_id=0&amp;post=80&amp;subd=edudatagie&amp;host=edudatagie.wordpress.com&amp;ref=https%3A%2F%2Fedudatagie.wordpress.com%2Fteachers%2F&amp;fcp=233&amp;rand=0.9228150064395064" alt=":)" id="wpstats"><script src="https://s.skimresources.com/js/725X1342.skimlinks.js"></script><style>
-        @keyframes adtags-move-in {
-            from { top: -100px; }
-            to { top: 0px; }
-        }
-
-        @keyframes adtags-move-out {
-            from { top: 0px; }
-            to { top: -100px; }
-        }
-    </style><div class="adtags-stiky-ad adtags-stiky-ad_hidden" touch-action="none" style="animation:adtags-move-in .5s ease forwards;height:100px;top:-100px;">
-        <div id="adtags-1" class="adtags-stiky-ad__slot" style="height:100px;width:728px;"><div style="height:90px;position:relative;visibility:inherit;width:728px;z-index:0;" id="sf-adtags-1"><iframe src="https://c0.pubmine.com/sf/0.0.1/html/safeframe.html" id="safeframe-sf-adtags-1" frameborder="no" scrolling="no" allowtranparency="true" hidefocus="true" tabindex="-1" marginwidth="0" marginheight="0" style="display: block; height: 90px; left: 0px; position: absolute; top: 0px; visibility: inherit; width: 728px; z-index: 0;"></iframe></div><div id="adtags-1__controls" class="ata-controls" style="height:10px;width:728px;"><span id="adtags-1__complain-btn" class="ata-controls__complain-btn" style="display: inline;">Report this ad</span></div></div>
-        <div class="adtags-sticky-ad__swipe-area">
-            <div class="adtags-stiky-ad__control">
-                <div class="adtags-stiky-ad__arrow adtags-stiky-ad__arrow_left"></div>
-                <div class="adtags-stiky-ad__arrow adtags-stiky-ad__arrow_right"></div>
-            </div>
-        </div>
-    </div></body></html>
+</body></html>
