--- a/data.html
+++ b/data.html
@@ -84,7 +84,8 @@ img.emoji {
 		__ATA.criteo = __ATA.criteo || {};
 		__ATA.criteo.cmd = __ATA.criteo.cmd || [];
 		</script>
-		<script type="text/javascript">
+
+		<!--<script type="text/javascript">
 		(function(){function g(a,c){a:{for(var b=a.length,d="string"==typeof a?a.split(""):a,e=0;e<b;e++)if(e in d&&c.call(void 0,d[e],e,a)){c=e;break a}c=-1}return 0>c?null:"string"==typeof a?a.charAt(c):a[c]};function h(a,c,b){b=null!=b?"="+encodeURIComponent(String(b)):"";if(c+=b){b=a.indexOf("#");0>b&&(b=a.length);var d=a.indexOf("?");if(0>d||d>b){d=b;var e=""}else e=a.substring(d+1,b);a=[a.substr(0,d),e,a.substr(b)];b=a[1];a[1]=c?b?b+"&"+c:c:b;a=a[0]+(a[1]?"?"+a[1]:"")+a[2]}return a};var k=0;function l(a,c){var b=document.createElement("script");b.src=a;b.onload=function(){c&&c(void 0)};b.onerror=function(){c("error")};a=document.getElementsByTagName("head");var d;a&&0!==a.length?d=a[0]:d=document.documentElement;d.appendChild(b)}function m(a){return"string"==typeof a&&0<a.length}
 		function p(a,c,b){c=void 0===c?"":c;b=void 0===b?".":b;var d=[];Object.keys(a).forEach(function(e){var f=a[e],n=typeof f;"object"==n&&null!=f||"function"==n?d.push(p(f,c+e+b)):null!==f&&void 0!==f&&(e=encodeURIComponent(c+e),d.push(e+"="+encodeURIComponent(f)))});return d.filter(m).join("&")}function q(){return window.__ATA||{}}function r(a,c){a||(q().config=c.c,l(c.url))}var t=Math.floor(1E13*Math.random());q().rid=t;
 		var u=q().pageParams,v="//"+(q().serverDomain||"s.pubmine.com")+"/conf",w=window.top===window,x;try{var y=JSON.parse(document.getElementById("oil-configuration").innerText);if("boolean"!==typeof y.gdpr_applies)throw Error("Config doesn't contain gdpr_applies");x=y.gdpr_applies?1:0}catch(a){x=null}
@@ -96,7 +97,7 @@ img.emoji {
 <meta name="msapplication-TileImage" content="https://edudatagie.files.wordpress.com/2019/09/educirclelogo.jpg?w=196">
 <script type="text/javascript">
 	window.google_analytics_uacct = "UA-52447-2";
-</script>
+</script>-->
 
 <script type="text/javascript">
 	var _gaq = _gaq || [];
@@ -112,8 +113,8 @@ img.emoji {
 		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);
 	})();
 </script>
-<!--<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script>
-<link rel="stylesheet" type="text/css" id="gravatar-card-css" href="https://0.gravatar.com/dist/css/hovercard.min.css?ver=201943y"><link rel="stylesheet" type="text/css" id="gravatar-card-services-css" href="https://0.gravatar.com/dist/css/services.min.css?ver=201943y"><script src="https://c0.pubmine.com/1.70.01571827725992/ata.js"></script><style>[touch-action="none"]{ -ms-touch-action: none; touch-action: none; }
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script>
+<!--<link rel="stylesheet" type="text/css" id="gravatar-card-css" href="https://0.gravatar.com/dist/css/hovercard.min.css?ver=201943y"><link rel="stylesheet" type="text/css" id="gravatar-card-services-css" href="https://0.gravatar.com/dist/css/services.min.css?ver=201943y"><script src="https://c0.pubmine.com/1.70.01571827725992/ata.js"></script><style>[touch-action="none"]{ -ms-touch-action: none; touch-action: none; }
 body /shadow-deep/ [touch-action="none"]{ -ms-touch-action: none; touch-action: none; }
 [touch-action="auto"]{ -ms-touch-action: auto; touch-action: auto; }
 body /shadow-deep/ [touch-action="auto"]{ -ms-touch-action: auto; touch-action: auto; }
