--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ img.emoji {
 <p style="text-align:left;">&nbsp;<span style="color:var(--color-text);">I am excited to offer you and your community top notch educational services.&nbsp;</span>Edudatagie offers many services that cater especially to all of those invested wholeheartedly in education; private schools, Sunday schools, after-school programs, community programs, charter and public schools, as well as their teachers.</p>
 <p style="text-align:left;">Edudatagie can assist you in gaining in depth knowledge of your students, allowing you to make data-informed decisions regarding instruction and school policy. We can also help reduce the burden for&nbsp;schools and programs in reporting and presenting to regulators and/or donors through professional student data analysis services.</p>
 <p style="text-align:left;">We can also assist teachers in developing and analyzing data variables appropriate for tracking their students’ progress throughout the school year. This makes reporting back to administration, preparing SGOs, and communicating with parents easier!</p>
-<p style="text-align:left;">Apart from data analysis services, Edudatagie also offers a range of educational services, including private tutoring and college admissions counseling for students.</p>
+<p style="text-align:left;"></p>
 <p style="text-align:left;">Please explore our website for more information on services and contact Nathalie for information on pricing.</p>
 <p style="text-align:center;">
 </p><div id="atatags-370373-5db4737f59094">
